--- a/heterogeneity.bib
+++ b/heterogeneity.bib
@@ -1016,6 +1016,16 @@
   year={2008}
 }
 
+@inproceedings{ester1996density,
+  title={A density-based algorithm for discovering clusters in large spatial databases with noise.},
+  author={Ester, Martin and Kriegel, Hans-Peter and Sander, J{\"o}rg and Xu, Xiaowei},
+  booktitle={Kdd},
+  volume={96},
+  number={34},
+  pages={226--231},
+  year={1996}
+}
+
 @article{farquhar2001models,
   title={Models of photosynthesis},
   author={Farquhar, GD and von Caemmerer, S and Berry, JA},
