some grammar fixes

--- a/heterogeneity - v5.tex
+++ b/heterogeneity - v5.tex
@@ -61,7 +61,9 @@ Software is available at XXX.
 \section{Introduction}
 
 %[Phenotyping]
-By consuming water, light and $CO_2$, plants produce sugars and release $O_2$ with photosynthesis \citep{kramer2011importance}. The process involves the formation of high energy intermediates capable of generating reactive oxygen species. The photosynthetic apparatus, chloroplast and surrounding leaf tissue is inherently susceptible to oxidative damage, especially under stress conditions when the supply of light energy exceeds the capacity to utilize it \citep{durrant1990characterisation,asada1996radical}. Plants have evolved a number of mechanisms, such as photosynthetic apparatus damage and repair \citep{melis1999photosystem}, to dissipate excess light energy to minimize the potential for damage at the expense of photosynthetic efficiency \citep{adams2006energy,rochaix2014regulation}. However, these mechanisms are sensitive to leaf development and thus may change from one leave tissue to another, resulting in heterogenous photosynthetic patterns (see examples in Figure \ref{fig:heterogeneityexample} where the chlorophyll fluorescence images are false-color images and the light intensity of every pixel is proportional to photosynthetic efficiency~\citep{toet1996new}). The heterogeneous patterns may also vary with the position, size and growth rate of leaves, since leaves at the same node is unique in age. By integrating plant morphological and physiological features, measuring plant photosynthetic heterogeneity aids interpretation of the sophisticated photosynthesis phonemics data, particularly important for plant primary productivity estimation and modeling \citep{meng2007spatial}.
+By consuming water, light and $CO_2$, plants produce sugars and release $O_2$ with photosynthesis \citep{kramer2011importance}. The process involves the formation of high energy intermediates capable of generating reactive oxygen species. The photosynthetic apparatus, chloroplast and surrounding leaf tissue is inherently susceptible to oxidative damage, especially under stress conditions when the supply of light energy exceeds the capacity to utilize it \citep{durrant1990characterisation,asada1996radical}. Plants have evolved a number of mechanisms, such as photosynthetic apparatus damage and repair \citep{melis1999photosystem}, to dissipate excess light energy to minimize the potential for damage at the expense of photosynthetic efficiency \citep{adams2006energy,rochaix2014regulation}. However, these mechanisms are sensitive to leaf development and thus may change from one leave tissue to another, resulting in heterogenous photosynthetic patterns (see examples in Figure \ref{fig:heterogeneityexample} where the chlorophyll fluorescence images are false-color images and the light intensity of every pixel is proportional to photosynthetic efficiency~\citep{toet1996new}). The heterogeneous patterns may also vary with the position, size and growth rate of leaves, since leaves at the same node \textcolor{red}{are} %is 
+unique in age. By integrating plant morphological and physiological features, measuring plant photosynthetic heterogeneity aids interpretation of %the 
+sophisticated photosynthesis phonemics data, \textcolor{red}{which is} particularly important for plant primary productivity estimation and modeling \citep{meng2007spatial}.
 
 \begin{figure}[tb]
 \centering
@@ -80,20 +82,27 @@ By consuming water, light and $CO_2$, plants produce sugars and release $O_2$ wi
 
 %photosynthetic heterogeneity refers to a plant comprising multiple regions, a significant amount of which have different photosynthesis properties, %. %For example, under full sunlight photosynthesis usually captures at most only of available energy (bonner1962upper, von1981some, kramer2011importance).
 
-Heterogeneity is a statistical concept relating to the uniformity in a substance~\citep{hall2003interpretation}. The granularity of the plant photosynthetic heterogeneity studies can range from cells to tissues, leaves, and even to the whole plant level. While in-leaf variability in photosynthetic activity has been well-studied for the understanding of the effects of stomatal conductance~\citep{Cheeseman1991,Buckley1997}, recent works show that photosynthetic capacity may decline with vertical gradient and leaf age \citep{Kitajima2002,chen2008effect}, suggesting that leaf-based photosynthetic heterogeneity is a key towards processing and understanding photosynthesis phenotype images. % the understanding of plant photosynthesis.
+Heterogeneity is a statistical concept relating to the uniformity in a substance~\citep{hall2003interpretation}. The granularity of %the 
+plant photosynthetic heterogeneity studies can range from cells to tissues, leaves, and even to the whole plant level. While in-leaf variability in photosynthetic activity has been well-studied for the understanding of the effects of stomatal conductance~\citep{Cheeseman1991,Buckley1997}, recent works show that photosynthetic capacity may decline with vertical gradient and leaf age \citep{Kitajima2002,chen2008effect}, suggesting that leaf-based photosynthetic heterogeneity is a key towards processing and understanding photosynthesis phenotype images. % the understanding of plant photosynthesis.
 
-The leaf heterogeneity in photosynthesis was firstly been studied  with computer simulation~\citep{chen2008effect}. Due to the lack of high-throughput phenotyping technologies, the authors determined the effects of biochemical variability via the Farquhar model (a mechanistic, biochemical model widely used to describe steady-state $CO_2$ assimilation in leaves), incorporating defined degrees of spatial variability of its parameters~\citep{sharkey1985o2,farquhar2001models}. %The results showed that spatial heterogeneity in photosynthesis can affect the ability of the Farquhar model to accurately characterize photosynthesis at the leaf level~\citep{chen2008effect}.
+%The leaf 
+\textcolor{red}{Leaf} heterogeneity in photosynthesis was \textcolor{red}{first} %firstly been 
+studied  with computer simulation~\citep{chen2008effect}. Due to the lack of high-throughput phenotyping technologies, the authors determined the effects of biochemical variability via the Farquhar model (a mechanistic, biochemical model widely used to describe steady-state $CO_2$ assimilation in leaves), incorporating defined degrees of spatial variability of its parameters~\citep{sharkey1985o2,farquhar2001models}. %The results showed that spatial heterogeneity in photosynthesis can affect the ability of the Farquhar model to accurately characterize photosynthesis at the leaf level~\citep{chen2008effect}.
 %
-Recently, with the advent of advanced technologies of biomedical imaging, directly measuring heterogeneity has recently assumed new importance~\citep{tiihonen1996cerebral,wieneke1999non,wang2000,cruz2014depi}. The rapid development of lighting and imaging techniques enables real-time non-invasive monitoring of photosynthesis \citep{houle2010phenomics,cruz2014depi}, resulting in vast amount of chlorophyll fluorescence images of plants \citep{wituszynska2013multivariable}. These images can be used to quantify photosynthetic behavior in genetically diverse populations, enabling to measure variability of photosynthetic parameters at high resolution across leaves, leading to better understanding of the underlying mechanisms that control the photosynthetic properties \citep{rascher2011non,fiorani2013future}. %However, there is no
+Recently, with the advent of advanced technologies of biomedical imaging, directly measuring heterogeneity has recently assumed new importance~\citep{tiihonen1996cerebral,wieneke1999non,wang2000,cruz2014depi}. The rapid development of lighting and imaging techniques enables real-time non-invasive monitoring of photosynthesis \citep{houle2010phenomics,cruz2014depi}, resulting in vast amount of chlorophyll fluorescence images of plants \citep{wituszynska2013multivariable}. These images can be used to quantify photosynthetic behavior in genetically diverse populations, enabling \textcolor{red}{the measurement of} %to measure 
+variability of photosynthetic parameters at high resolution across leaves, leading to better understanding of the underlying mechanisms that control the photosynthetic properties \citep{rascher2011non,fiorani2013future}. %However, there is no
 
-Measuring leaf-based photosynthetic variability in large-scale phenotyping experiments requires automatical identification of most of the visible leaves in all fluorescence images and an appropriate measurement for the variation of photosynthesis parameters across leaves that takes geometrical (leaf position and size), temporal (leaf growth rate) and physiological (leaf age) information into consideration. However, there is currently no existing infrastructure to analyze such amount of phenotype information. %The challenges of this work include not only the accurate leaf alignment in complex plant leaf layout, but also the development of a new heterogeneity measure that
+Measuring leaf-based photosynthetic variability in large-scale phenotyping experiments requires automatic%al 
+identification of most of the visible leaves in all fluorescence images and an appropriate measurement for the variation of photosynthesis parameters across leaves that takes geometrical (leaf position and size), temporal (leaf growth rate) and physiological (leaf age) information into consideration. However, there is currently no existing infrastructure to analyze such \textcolor{red}{an} amount of phenotype information. %The challenges of this work include not only the accurate leaf alignment in complex plant leaf layout, but also the development of a new heterogeneity measure that
 %
-In this paper, we present a new computational framework called {\it Plant Photosynthesis Heterogeneity} (PlantPH), and use the tool to analyze the leaf-level photosynthesis heterogeneity patterns of more than 100 Arabidopsis chloroplast mutant strains over dynamic lighting conditions, each with at least four replicates. The followed outlier detection process successfully identify mutants with distinct heterogeneity patterns under specific subsets of the environmental conditions.
+In this paper, we present a new computational framework called {\it Plant Photosynthesis Heterogeneity} (PlantPH), and use the tool to analyze the leaf-level photosynthesis heterogeneity patterns of more than 100 Arabidopsis chloroplast mutant strains over dynamic lighting conditions, each with at least four replicates. The followed outlier detection process successfully \textcolor{red}{identifies} %identify 
+mutants with distinct heterogeneity patterns under specific subsets of the environmental conditions.
 %
 Overall, PlantPH has the following three advantages: %The mutant screen analysis reveals that ...
 \begin{enumerate}\vspace{-0.1in}
   \item~~It is the first computational framework to measure plant leaf-level heterogeneity of photosynthesis with leaf size, position and growth rate.
-  \item~It's performance is significantly better than the traditional heterogeneity tests that cannot fully use the spatial and temporal information in the fluorescence images.
+  \item~It's performance is significantly better than %the 
+traditional heterogeneity tests that cannot fully use the spatial and temporal information in the fluorescence images.
   \item~It discovers multiple types of photosynthetic variabilities in a large scale experiment.
 \end{enumerate}
 
@@ -162,7 +171,7 @@ The second obstacle is that the leaf alignment process is a time consuming proce
 \vspace{-0.2in}
 \subsection{Heterogeneity Test}
 
-Cochran's Q-test is the classical measure of heterogeneity~\citep{conover1999Practical}. In the scenario of leaf-based photosynthetic heterogeneity, $Q$ is calculated as the weighted sum of squared differences between the photosynthesis value of a individual leaf and the pooled photosynthesis value across all leaves with the weights being those used in the pooling method. The distribution of $Q$ is a chi-square statistic with $k-1$ degrees of freedom, where $k$ is the number of leaves. Cochran's Q-test has been widely used in biomedical studies. For example, heterogeneity in the aggressiveness of tumor cell populations has been adopted as an essential feature in predicting treatment success~\citep{OSullivan2003}. %However, due to the nature of plants, leaf-based photosynthetic heterogeneity often includes a small number of leaves, and thus the power of the Q-test in such circumstances could be low~\citep{higgins2003measuring, gavaghan2000evaluation}.
+Cochran's Q-test is the classical measure of heterogeneity~\citep{conover1999Practical}. In the scenario of leaf-based photosynthetic heterogeneity, $Q$ is calculated as the weighted sum of squared differences between the photosynthesis value of an individual leaf and the pooled photosynthesis value across all leaves with the weights being those used in the pooling method. The distribution of $Q$ is a chi-square statistic with $k-1$ degrees of freedom, where $k$ is the number of leaves. Cochran's Q-test has been widely used in biomedical studies. For example, heterogeneity in the aggressiveness of tumor cell populations has been adopted as an essential feature in predicting treatment success~\citep{OSullivan2003}. %However, due to the nature of plants, leaf-based photosynthetic heterogeneity often includes a small number of leaves, and thus the power of the Q-test in such circumstances could be low~\citep{higgins2003measuring, gavaghan2000evaluation}.
 %
 %Conversely, Q has too much power as a test of heterogeneity if the number of leaves is large \citep{higgins2003measuring}.
 %
@@ -170,7 +179,9 @@ Cochran's Q-test is the classical measure of heterogeneity~\citep{conover1999Pra
 
 The $I^2$ statistic describes the percentage of variation across studies that is due to heterogeneity rather than chance~\citep{higgins2002quantifying,higgins2003measuring}. $I^2$ can be calculated as $I^2 = (Q - df)/Q$, where Q is Cochran's Q-test heterogeneity statistic and $df$ is the degrees of freedom. A negative value  indicates no observed heterogeneity, and larger values show increasing heterogeneity. $I^2$ is an intuitive and simple expression of the inconsistency. $I^2$ of leaf-based photosynthetic heterogeneity does not inherently depend upon the number of leaves, so that $I^2$ values of different plants become comparable. A confidence interval for $I^2$ can be constructed using either the iterative non-central chi-squared distribution method \citep{hedges2001power} or the test-based method \citep{higgins2002quantifying}.
 
-However, due to the nature of plant, leaf-based photosynthetic heterogeneity often includes a small number of leaves. For example, there are less than ten rosette leaves of 2-3 week old Arabidopsis thaliana (a model plant). Thus, the power of the traditional Cochran's Q-test and $I^2$ statistic in such circumstances is low~\citep{higgins2003measuring, gavaghan2000evaluation,huedo2006assessing,ioannidis2007uncertainty}.
+However, due to the nature of plants, leaf-based photosynthetic heterogeneity often includes a small number of leaves. For example, there are \textcolor{red}{fewer} %less 
+than ten rosette leaves %of
+\textcolor{red}{on a} 2-3 week old Arabidopsis thaliana (a model plant). Thus, the power of the traditional Cochran's Q-test and $I^2$ statistic in such circumstances is low~\citep{higgins2003measuring, gavaghan2000evaluation,huedo2006assessing,ioannidis2007uncertainty}.
 
 Furthermore, leaves with different locations, sizes or growth rates may have diverse photosynthetic performance, resulting in high level of heterogeneity~\citep{van1991insertional,chen2008effect}. But none of these factors has yet been taken into the existing measurement of heterogeneity.
 
@@ -178,7 +189,7 @@ Furthermore, leaves with different locations, sizes or growth rates may have div
 
 %To measure leaf-based photosynthetic variability in a large-scale phenotyping experiment, in which hundreds of plants are monitored in real time, it is naturally required to identify each leaf from top-view photosynthesis images automatically. However, leaf identification is a difficult task, in that 1) all the leaves are very similar in appearance especially for model plant Arabidopsis; 2) leaf features are much fewer than the well-studied face recognition problem; and 3) leaves may overlapped with each other that makes the problem more complicated. In short, there are two challenging computational problems. First, how to separate overlapped leaves in photosynthesis images where the leaf boundaries are obscure. Second, how to recognize incomplete leafs due to occlusion. Alternatively, approximation approaches can be used to estimate the leaf-based photosynthetic heterogeneity, including distribution based, region based and pixel based approaches. While these approximation approaches are easier to model, their performance may be reduced.
 
-Based on the rapid development in the fields of bio-imaging and computer vision, we develop a new approach called PlantPH that quantifies the heterogeneity of photosynthesis across leaves of the same plant, and compare the degree of inconsistency among mutant strains in varying environmental conditions.
+%Based on the rapid development in the fields of bio-imaging and computer vision, we develop a new approach called PlantPH that quantifies the heterogeneity of photosynthesis across leaves of the same plant, and compare the degree of inconsistency among mutant strains in varying environmental conditions.
 
 \begin{figure}
   \centering
@@ -337,7 +348,7 @@ Finally, we recognize the types of heterogeneity patterns in $H$ with an outlier
 \end{methods}
 \section{Results}
 
-We tested the performance of PlantPH on two datasets, i.e. a real dataset from a large-scale Arabidopsis phenotype screen experiment and a synthetic dataset that includes multiple types of heterogeneity patterns. We also compared PlantPH with two popular heterogeneity tests, where one is the traditional Cochran¡¯s Q-test and the $I^2$ statistic, and the other is a grid based heterogeneity test. Overall, the comparisons show that XXX.
+We tested the performance of PlantPH on two datasets, i.e. a real dataset from a large-scale Arabidopsis phenotype screen experiment and a synthetic dataset that includes multiple types of heterogeneity patterns. We also compared PlantPH with two popular heterogeneity tests, where one is the traditional Cochranï¿½ï¿½s Q-test and the $I^2$ statistic, and the other is a grid based heterogeneity test. Overall, the comparisons show that XXX.
 
 \subsection{Arabidopsis Experiment}
 
