more grammar, checked math

--- a/heterogeneity - v5.tex
+++ b/heterogeneity - v5.tex
@@ -166,7 +166,8 @@ In addition, the leaf boundaries are not precisely identified by the multi-leaf 
 %
 Subsequently, the leftover of leaf alignment consists of partial leaves that are highly overlapped and leaf boundaries of the successfully recognized leaves (Fig. XX). The covered leaves are usually old leaves with diverse photosynthesis activities. Simply deleting them may result in inaccurate heterogeneity scores.
 %
-The second obstacle is that the leaf alignment process is a time consuming process. Processing 100 images each containing 20 plants may take about 5 hours. It is not practical to apply leaf alignment on all the images (in our case 17.8 years are need to process all the 31,120 images).
+The second obstacle is that the leaf alignment process is a time consuming process. Processing 100 images each containing 20 plants may take about 5 hours. It is not practical to apply leaf alignment on all the images (in our case \textcolor{red}{2 months} %17.8 years are need 
+would be needed to process all the 31,120 images).
 
 \vspace{-0.2in}
 \subsection{Heterogeneity Test}
